--- a/src/components/Days/DayList/DayList.module.css
+++ b/src/components/Days/DayList/DayList.module.css
@@ -7,5 +7,38 @@
     width: 100%;
     height: 100%;
     overflow: auto;
+    padding-right: 10px;
 
+    box-sizing: border-box;
+
+    scrollbar-gutter: stable;
+}
+
+.add{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    font-size: 1.05rem;
+    height: 30px;
+    padding: 5px;
+    padding-inline: 10px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    background-color: rgba(212, 212, 212, 0.173);
+    border: 2px solid rgba(201, 201, 201, 0.838);
+    color: rgb(155, 155, 155);
+    cursor: pointer;
+}
+
+.add:hover{
+    background-color: rgba(212, 212, 212, 0.67);
+    color: rgb(251, 251, 251);
+}
+
+.add:active{
+    background-color: rgba(212, 212, 212, 0.173);
+    color: rgb(155, 155, 155);
 }
