--- a/src/components/Days/Day/Day.module.css
+++ b/src/components/Days/Day/Day.module.css
@@ -66,6 +66,7 @@
     justify-content: center;
     border-radius: 5px;
     padding: 5px;
+    cursor: pointer;
 }
 
 .button:hover{
@@ -79,6 +80,17 @@
 
 }
 
+.delete {
+    fill: red;
+}
+
+.buttons{
+    display: flex;
+    gap: 5px;
+}
+
+
+
 .expand {
     cursor: pointer;
     transition: all 0.4s ease-in-out;
@@ -91,7 +103,11 @@
 }
 
 .marker_input{
-    height: 140%;
+    display: flex;
+    height: 100%;
+    background-color: transparent;
+    border: none;
+    font-size: 1.2em;
 
 }
 
@@ -101,6 +117,5 @@
     align-items: center;
     box-sizing: border-box;
     padding: 5px;
-    border-radius: 5px;
     border-bottom: 1px solid rgba(201, 201, 201, 0.832);
 }
